single_deployments/core.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core1
  labels:
    app: core1
spec:
  replicas: 4
  template:
    metadata:
      name: core1
      labels:
        app: core1
    spec:
      containers:
      - name: core1
        image: mcr.microsoft.com/windows/servercore:ltsc2019
        postStart:
          exec:
            command: ["cmd.exe", "/C", ""]
        command:
          - cmd.exe
        args:
          - /C
          - "ping -t localhost"
        resources:
          limits:
            cpu: 500m
            memory: 1024M
      tolerations:
      - key: "windows"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
  selector:
    matchLabels:
      app: core1
