single_deployments/pinglocal.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
  labels:
    app: core
spec:
  replicas: 60
  template:
    metadata:
      name: core
      labels:
        app: core
    spec:
      containers:
      - name: core
        image: mcr.microsoft.com/windows/servercore:ltsc2019
        command:
          - cmd.exe
        args:
          - /C
          - "ping -t localhost"
        resources:
          limits:
            memory: 50m
            cpu: 10m
      tolerations:
      - key: "windows"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      nodeSelector:
        "beta.kubernetes.io/os": windows
  selector:
    matchLabels:
      app: core
