single_deployments/aspnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnet-deployment
  labels:
    app: aspnet-app
spec:
  replicas: 2
  template:
    metadata:
      name: aspnet-pod
      labels:
        app: aspnet-app
    spec:
      containers:
      - name: aspnet-container
        image: mcr.microsoft.com/dotnet/framework/samples:aspnetapp
        ports:
          - containerPort: 80
        resources:
          requests:
            cpu: "1"
            memory: "1024Mi"
          limits:
            cpu: "2"
            memory: "2048Mi"
      nodeSelector:
        "kubernetes.io/os": windows
      tolerations:
      - key: "windows"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
  selector:
    matchLabels:
      app: aspnet-app
---
apiVersion: v1
kind: Service
metadata:
  name: aspnet-svc
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: aspnet-app
