single_deployments/iis-svc-only.yml
apiVersion: v1
kind: Service
metadata:
  name: iis2
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: iis2
